# cyminiball

./: .coveragerc  .deepsource.toml  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  build_install.sh  build_install_test.sh  deploy.sh  deploy_test.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
bindings/: _miniball_wrap.hpp  _miniball_wrap.pyx
examples/: comparison.py  examples.py
src/: __init__.py  _compat.py  _miniball_wrap.pyx
src/miniball/: LICENSE  miniball.hpp
test/: context.py  examples.py  run_tests.py
tests/: context.py  test_all.py
