[build-system]
# Cython dependency is optional, see setup.py for details.
# For the package (run-time) dependencies, see setup.cfg.
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"


# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--cov-config=.coveragerc",
    "--cov=cyminiball",
    "--cov-report=term-missing"
]
testpaths = [
    "tests"
]
