# NOTE: Multi-line configs break the meta-data read-out!
# https://github.com/pypa/setuptools/issues/1390
[metadata]
name = cyminiball
version = file: VERSION.in
url = https://github.com/hirsch-lab/cyminiball
license = LGPLv3
license_file = LICENSE
description = Compute the smallest bounding ball of a point cloud. Cython binding of the popular miniball utility. Fast!
long_description = file: README.md
long_description_content_type = text/markdown
author = Norman Juchler
keywords = miniball, geometry, fast
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
setup_requires =
    setuptools>=38.3.0
install_requires =
    numpy>=1.0
    importlib-metadata;python_version < "3.8"
python_requires = >=3.6

# https://pycodestyle.pycqa.org/en/latest/intro.html#configuration
[pycodestyle]
ignore = E241
